make this java21+